Update status configuration.

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,18 +5,20 @@ repo: ewizz_status # The name of this repository
 sites:
   - name: EWIZZ public page
     url: https://www.ewizz.co.za
+  - name: EWIZZ customer portal
+    url: https://office.ewizz.co.za
   - name: EWIZZ API
-    url: https://api.ewizz.co.za
+    url: https://api.ewizz.co.za/v2/user_code?ezcode=abcdef
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.ewizz.ninja
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://www.ewizz.co.za/wp-content/uploads/2013/12/ewizz-logo-web-white-601.png
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "EWIZZ Status page"
+  introMessage:
   navbar:
     - title: Status
       href: /
